--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
-}
+/* HOME SCREEN */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+  height: calc(100vh - 54px);
+  min-height: 750px;
+  /* background-color: red; */
 }
 
-.App-link {
-  color: #61dafb;
+.home-logo-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  height: auto;
+  overflow: hidden;
+  transition: .5s;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.home-sion-container{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.home-logo-o {
+  position: absolute;
+  top: 20%;
+  margin-left: 1%;
+  cursor: pointer;
+  width: 27.6%;
+}
+
+
+.home-logo-o:active{
+  transform: scale(.95); 
+  transition: .2s;
+}
+
+@media screen and (max-width: 1600px) {
+  .home-logo-container {
+    width: 60%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width: 1200px) {
+  .home-logo-container {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .home-logo-container {
+    width: 100%;
   }
 }
